--------------------------------------------------------------------------
---------                Ampache -- CHANGELOG                    ---------   
--------------------------------------------------------------------------

--------------------------------------------------------------------------
  v.3.4-Beta2 
	- Implemented a semi-working write_tags.inc script limited by getid3()
		support (Thx tomatopi)
	- Added limit option to the XML API
	- Fixed an issue where inline song editing wouldn't update the song 
		title (Thx profner)
	- Fixed conf error on registration confirmation and made it
		aware of greylisting
	- Fixed Admin Preference Level updates
	- Fixed incorrect command for skip to on HttpQ (Thx usaf_pride)
	- Fixed problem with gif and png resize
	- Fixed problem where democratic play wouldn't send to localplay
		and would just display a blank screen
	- Added Multi-Character Filter on browse pages
	- Fixed Flag Management Interface
	- Added Export Catalog to CSV
	- Added 'Add New...' option to other fields on Song Edit (Thx picasso)
	- Fixed incorrect index on localplay playlist after track deletion
	- Fixed lack of high-light of current playing item on localplay
		playlist
	- Fixed problem where second send to MPD would invalidate all 
		previous songs on the playlist
	- Fixed LastFM album art gather so it ignores noimage results from 
		lastfm
	- Fixed downsample remote so that is downsamples those not in the
		network def rather then those inside the network def
	- Fixed issue with page-a-nation on show catalogs page
	- Fixed removal of rating from db when 'unrating' the object (Thx flashk)
	- Fixed Itunes Export (Thx flashk)
	- Fixed session start failure when use_auth is off and you have
		no pre-existing cookie
	- Fixed print_tags.inc file to catalog matching, now fuzzy like it
		should be
	- Fixed bug where file pattern would be ignored if there were no
		tags in file
	- Replaced " " with "\s" on Pattern Match Logic